--- a/langs/en.json
+++ b/langs/en.json
@@ -2,8 +2,18 @@
   "message-1": "%s needs outcoming station",
   "building-1": "Forest",
   "building-2": "Wheat field",
+  "building-3": "Sawmill",
+  "building-4": "Windmill",
+  "building-5": "Village",
+  "building-6": "Iron mine",
+  "building-7": "Smeltery",
+  "resource-people": "Population",
   "resource-1": "Wood",
   "resource-2": "Wheat",
+  "resource-3": "Wooden plank",
+  "resource-4": "Bread",
+  "resource-5": "Iron",
+  "resource-6": "Iron ingot",
   "tool-view": "View",
   "tool-road": "Build road",
   "tool-station": "Build station",
