--- a/langs/en.json
+++ b/langs/en.json
@@ -1,5 +1,7 @@
 {
-  "message-1": "%s needs outcoming station",
+  "message-1": "%s wants %s",
+  "message-2": "%s needs outcoming station",
+  "message-3": "%s needs %s",
   "building-1": "Forest",
   "building-2": "Wheat field",
   "building-3": "Sawmill",
