--- a/langs/en.json
+++ b/langs/en.json
@@ -10,6 +10,12 @@
   "building-5": "Village",
   "building-6": "Iron mine",
   "building-7": "Smeltery",
+  "job-1": "Woodcutter",
+  "job-2": "Farmer",
+  "job-3": "Carpenter",
+  "job-4": "Miller",
+  "job-6": "Miner",
+  "job-7": "Smith",
   "resource-people": "Population",
   "resource-1": "Wood",
   "resource-2": "Wheat",
